<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000FF"
    tools:context=".Login.SignupActivity">

    <LinearLayout
        android:id="@+id/containerLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtViewCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/txtViewCreateAccount"
            android:textColor="@color/white"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/txtViewName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/txtViewName"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/inputFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/editTextInputFirstName"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/txtViewLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/txtViewLastName"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/inputLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/editTextInputLastName"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/txtViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/txtViewEmail"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/editTextInputEmail"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/txtViewUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/txtViewUsername"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/inputUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/editTextInputUsername"
            android:importantForAutofill="no"
            android:inputType="text"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/txtViewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/txtViewPassword"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/editTextInputPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <TextView
            android:id="@+id/txtViewConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/txtViewConfirmPassword"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/inputPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="24dp"
            android:hint="@string/editTextConfirmPassword"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            tools:ignore="SpeakableTextPresentCheck,TextContrastCheck" />

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/black"
            android:minHeight="48dp"
            android:text="@string/BtnSignup" />

    </LinearLayout>


</ScrollView>