<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000FF"
    android:orientation="vertical"
    tools:context=".Borrower.LoanDetails.CheckLoanDetails">

    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:contentDescription="@string/logo"
        android:padding="10dp"
        android:src="@drawable/fundmelogo" />

    <TextView
        android:id="@+id/titleCheckLoanD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/loan_details_related_operations"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/optionsContainerLoanD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/checkLoanLoanDBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="addDetailFragment"
            android:text="@string/check_loan_s_details"
            android:textSize="11sp" />

        <Button
            android:id="@+id/rCheckLoanLoanDBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="removeDetailFragment"
            android:text="@string/remove_loan_s_details"
            android:textSize="11sp" />

        <Button
            android:id="@+id/makeAPaymentLoanDBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:onClick="showPaymentDialog"
            android:text="@string/make_a_payment"
            android:textSize="11sp" />

        <Button
            android:id="@+id/goBackLoanDBt"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black"
            android:text="@string/go_back"
            android:textSize="11sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/detailsContainerLoanD"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

    </FrameLayout>

</LinearLayout>